--- a/workspace.html
+++ b/workspace.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body>
-    <div id="wrapper" class="flex justify-center border bg-[#ece9e6]">
+    <div id="wrapper" class="flex justify-center bg-[#ece9e6]">
         <div class="flex flex-col items-center gap-[25px] shadow-xl/20 max-w-[550px] min-h-screen w-full mt-[60px] bg-white rounded-[20px] px-[25px] py-[30px]">
             <div class="flex w-full justify-between ">
                 <h2 id="hello" class="text-[1.2rem] font-semibold py-2.5"></h2>
